<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BTsendIR">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_ir_over_bt"
        android:id="@+id/iroverbt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterPCode"
        android:id="@+id/entCode"
        android:layout_alignTop="@+id/pCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sndCode"
        android:id="@+id/btnSend"
        android:layout_above="@+id/btnDisc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDisc"
        android:id="@+id/btnDisc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/pCode"
        android:editable="true"
        android:height="125dp"
        android:layout_above="@+id/btnSend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProntoTest"
        android:id="@+id/ProntoTest"
        android:layout_below="@+id/pCode"
        android:layout_alignRight="@+id/pCode"
        android:layout_alignEnd="@+id/pCode"
        android:clickable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/hexCode"
        android:editable="true"
        android:height="60dp"
        android:layout_alignBottom="@+id/btnHex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btnHex"
        android:layout_toStartOf="@+id/btnHex"
        android:inputType="textCapWords"
        android:layout_alignTop="@+id/btnHex" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Hex"
        android:id="@+id/btnHex"
        android:layout_above="@+id/entCode"
        android:layout_toRightOf="@+id/entCode"
        android:layout_toEndOf="@+id/entCode"
        android:layout_marginBottom="53dp" />

</RelativeLayout>
